@@ -1,5 +1,5 @@
-%define ver 3.6.1p1
-%define rel 2
+%define ver 3.6.1p2
+%define rel 1
 
 # OpenSSH privilege separation requires a user & group ID
 %define sshd_uid    74
